# QPilot

./: .env.example  .gitignore  CLAUDE.md
backend/: .env.example  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/agents/: deepdive_agent.py  risk_agent.py  screening_agent.py  sentiment_agent.py  supervisor.py
backend/agents/tools/: formatters.py  openbb_mcp.py  scoring.py
backend/middleware/: auth.py  cors.py  rate_limit.py
backend/models/: analysis.py  stock.py  user.py
backend/routers/: analysis.py  health.py  screener.py  stock.py  watchlist.py
backend/services/: batch_screener.py  cache.py  llm.py  openbb_client.py
backend/utils/: metrics.py  sp500.py
database/: schema.sql
docs/: LEGAL_DISCLAIMERS.md
frontend/: eslint.config.mjs  middleware.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/onboarding/: page.tsx
frontend/src/app/(app)/screener/: page.tsx
frontend/src/components/common/: ApiKeyInput.tsx  LoadingState.tsx  PaywallGate.tsx
frontend/src/components/layout/: MobileNav.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/components/stock/: RatingBadge.tsx  ScoreGauge.tsx  TickerCard.tsx
frontend/src/hooks/: useStockData.ts  useSubscription.ts  useUser.ts
frontend/src/lib/: api.ts  stripe.ts
frontend/src/lib/supabase/: client.ts  middleware.ts  server.ts
frontend/src/types/: api.ts  stock.ts  user.ts
scripts/: batch_screen.py  deploy.sh  update_sp500.py
(+8 files in other folders)
