[project]
name = "qpilot-backend"
version = "0.1.0"
description = "QPilot — AI-powered stock analysis SaaS backend (LangGraph + OpenBB MCP)"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Auth & database
    "supabase>=2.10.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",

    # LLM / agent orchestration
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",

    # Market data
    "openbb>=4.0.0",

    # Infrastructure
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "stripe>=11.0.0",

    # Data / scoring
    "numpy>=1.26.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
